--- a/views/home.ejs
+++ b/views/home.ejs
@@ -17,7 +17,7 @@
     <% }) %>
     <div class="row">
     <div class="col-md-12">
-      <a href="http://localhost:3000/compose" >
+      <a href="https://quiet-harbor-93891.herokuapp.com/compose" >
         <button type="button" class="btn btn-outline-default waves-effect btn-lg" style="float: right;"><i class="fas fa-star pr-2" aria-hidden="true"></i>Compose</button>
       </a> 
     </div>
