--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,9 +13,9 @@
         <p class="navbar-brand">DAILY JOURNAL</p>
       </div>
         <ul class="nav navbar-nav navbar-right">
-          <li id="home"><a href="/">HOME</a></li>
-          <li id="about"><a href="/about">ABOUT US</a></li>
-          <li id="contact"><a href="/contact">CONTACT US</a></li>
+          <li id="home"><a href="https://quiet-harbor-93891.herokuapp.com">HOME</a></li>
+          <li id="about"><a href="https://quiet-harbor-93891.herokuapp.com/about">ABOUT US</a></li>
+          <li id="contact"><a href="https://quiet-harbor-93891.herokuapp.com/contact">CONTACT US</a></li>
         </ul>
     </div>
   </nav>
