--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -5,12 +5,28 @@
     <img class="bg-img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRAmnzPf0xLQd01F3ApIIwRG8QY8O9KfUHYVA&usqp=CAU" alt="...">
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto">
-        <h1 class="fw-light">earnBazaar</h1>
+        <h1 class="fw-light" style="font-family: 'Lobster', cursive;">earnBazaar</h1>
         <p class="lead text-muted">ALl in one solutions.</p>
         <p>
-          <a href="/page1" class="btn btn-primary my-2">Companies</a>
-          <a href="/page2" class="btn btn-secondary my-2">Indiviuals</a>
-        </p>
+          <div class="row">
+            <div class="col-md-6">
+          <div class="card" style="width: 18rem">
+            <div class="card-body">
+              <h4 class="card-title">For Companies</h4>
+          <a href="/page1" class="btn btn-primary my-2">Get Started</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="card" style="width: 21rem;">
+            <div class="card-body">
+              <h4 class="card-title">For Colleges/Influencers</h4>
+              <a href="/page2" class="btn btn-primary my-2">Get Started</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </p>
       </div>
     </div>  
   </section>
