--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -5,8 +5,12 @@
       <div class="form-group">
         <label>Title</label>
         <input class="form-control" type="text" name="postTitle">
-        <label>Post</label>
+        <label>Details</label>
         <textarea class="form-control" name="postBody" rows="5" cols="30"></textarea>
+        <label>Price</label>
+        <textarea class="form-control" name="postPrice" rows="5" cols="30"></textarea>
+        <label>Time</label>
+        <textarea class="form-control" name="postTime" rows="5" cols="30"></textarea>
       </div>
       <button class="btn btn-primary" type="submit" name="button">Publish</button>
     </form>
