--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -5,23 +5,36 @@
     <img class="bg-img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRAmnzPf0xLQd01F3ApIIwRG8QY8O9KfUHYVA&usqp=CAU" alt="...">
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto">
-        <h1 class="fw-light" style="font-family: 'Lobster', cursive;">earnBazaar</h1>
-        <p class="lead text-muted">ALl in one solutions.</p>
+        <h1 class="fw-light" style="font-family: 'Lobster', cursive;">        <strong> <span style="color: #00C4CC;">earn</span><span style="color: #6A3BE4;">Bazaar</span>  </strong>
+        </h1>
+        <p class="lead text-muted">Matching Colleges and Influencers with Great Companies.</p>
         <p>
-          <div class="row">
+          <div class="row" style="margin-bottom: 50px; margin-top: 50px;">
             <div class="col-md-6">
-          <div class="card" style="width: 18rem">
+          <div class="card" style="width: 20rem; height: 14rem;">
             <div class="card-body">
               <h4 class="card-title">For Companies</h4>
+              <h5 class="card-subtitle  mb-2 text-muted">We are the leading platform to help you get the best market to advertise your product at reasonable cost</h5>
           <a href="/page1" class="btn btn-primary my-2">Get Started</a>
             </div>
           </div>
         </div>
+        
         <div class="col-md-6">
-          <div class="card" style="width: 21rem;">
+          <div class="card" style="width: 20rem; height: 14rem;">
             <div class="card-body">
               <h4 class="card-title">For Colleges/Influencers</h4>
+              <h5 class="card-subtitle  mb-2 text-muted">Join the best community of influencers and colleges to earn or get your events sponsored</h5>
               <a href="/page2" class="btn btn-primary my-2">Get Started</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6" style="margin: auto; margin-top: 20px;">
+          <div class="card" style="width: 20rem;">
+            <div class="card-body">
+              <h4 class="card-title">Go For Good!</h4>
+              <h5 class="card-subtitle  mb-2 text-muted">Join NGOs and be their marketing face.</h5>
+              <a href="/" class="btn btn-primary my-2">Get Started</a>
             </div>
           </div>
         </div>
@@ -32,11 +45,6 @@
   </section>
 </div>
 
-  <div class="album py-5 bg-light">
-    <div class="container">
-
-      
-    </div>
-  </div>
+  
 
 <%- include("partials/footer"); -%>
