--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,6 +16,7 @@
 </head>
 <header>
   <div class="collapse bg-dark" id="navbarHeader">
+    
     <div class="container">
       <div class="row">
         <div class="col-sm-8 col-md-7 py-4">
@@ -33,16 +34,22 @@
       </div>
     </div>
   </div>
-  <div class="navbar navbar-dark bg-dark shadow-sm">
+  <div class="navbar navbar-dark bg-dark shadow-md">
     <div class="container">
       <a href="/" class="navbar-brand d-flex align-items-center" style="font-size:large">
         <strong> earnBazaar</strong>
       </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
+      <div>
+        <button class="btn btn-warning" type="button" style="margin-left: 20px; margin-right: 20px;">Register</button>
+        
+        <button class="btn btn btn-primary" type="button">Login</button>
+      </div>
+             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
+      
     </div>
   </div>
 </header>
-  <body>
-    <div class="container" style="height: 400px;">
+  <body >
+    <div class="container" style="height: 800px">
