--- a/views/home2.ejs
+++ b/views/home2.ejs
@@ -1,27 +1,50 @@
 
 <%- include("partials/header"); -%>
-<div class="container-fluid" style="align-content: center;">
-
-    <h1>Home</h1>
-    <p> <%= startingContent %> </p>
 
 
-  <%  posts.forEach(function(post){ %>
+<div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+  <h1 class="display-4"> Feed</h1>
+  <p class="lead">Quickly get an effective marketing solution for your potential customers with earnBazaar.</p>
+</div>
 
-    <h1><%=post.title%></h1>
-    <p>
-    <%=post.content.substring(0, 100) + " ..."%>
-    <a href="/posts/<%=post._id%>">Read More</a>
-    </p>
+    <%  posts.forEach(function(post){ %>
+
+    <div class="container" >
+      <div class="card-deck mb-3 text-center row">
+        <div class="card mb-4 box-shadow col-md-6" style="margin: auto;">
+          <div class="card-header">
+            <h4 class="my-0 font-weight-normal"><%=post.title%></h4>
+          </div>
+          <div class="card-body">
+            <h1 class="card-title pricing-card-title"><%=post.time%></small></h1>
+            <h5 class="my-0 font-weight-normal"><%=post.price%></h5>
+            <ul class="list-unstyled mt-3 mb-6">
+              
+              <li>250+ participants</li>
+              <li>5 days event</li>
+              <li>Email support</li>
+            </ul>
+            <p>
+              <%=post.content.substring(0, 190) + " ..."%>
+              <a href="/posts/<%=post._id%>">Read More</a>
+              </p>
+            <button type="button" class="btn btn-lg btn-block btn-outline-primary">Know more</button>
+          </div>
+        </div>
+        
+      </div>
+  
+
+    <h2></h2>
+    
 
     
     <% }) %>
-    <div class="row">
-    <div style="align-content: center;">
+    <div class="container-fluid" >
+    <div style="text-align: center;">
       <a href="/compose" >
-        <button type="button" class="btn btn-outline-default waves-effect btn-lg" style="float: right;"><i class="fas fa-star pr-2" aria-hidden="true"></i>Add Your Own Deal</button>
+        <button type="button" style="font-size:2rem;" class="btn btn-outline-default waves-effect btn-lg"><i class="fa fa-plus" aria-hidden="true"></i> <strong>Add</strong> </button>
       </a> 
     </div>
-  </div>
   </div>
 <%- include("partials/footer"); -%>
