--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -36,7 +36,7 @@
   </div>
   <div class="navbar navbar-dark bg-dark shadow-md">
     <div class="container">
-      <a href="/" class="navbar-brand d-flex align-items-center" style="font-size:large">
+      <a href="/" class="navbar-brand d-flex align-items-center" style="font-size:large;">
         <strong> earnBazaar</strong>
       </a>
       <div>
